Fix horizontal scrolling in small viewports

--- a/styles/index.css
+++ b/styles/index.css
@@ -51,7 +51,6 @@ select:hover {
 
 body {
   display: flex;
-  flex-direction: column;
   width: 100vw;
   height: 100vh;
   margin: 0;
